--- a/mbdyn/manual/input/elements.tex
+++ b/mbdyn/manual/input/elements.tex
@@ -5893,8 +5893,8 @@ weighed by the coefficient \nt{coef} (or by the list of coefficients
 	+ \T{\Phi}_{/\T{x}}^T \Delta\T{\lambda}
 	&= \T{F} - \T{\Phi}_{/\T{x}}^T \T{\lambda} \\
 	\T{\Phi}_{/\T{x}} \Delta\T{x}
-	- \mathtt{<coef>} \cdot \Delta\T{\lambda}
-	&= - \T{\Phi}\plbr{\T{x}, t} + \mathtt{<coef>} \cdot \T{\lambda}
+	- \nt{coef} \cdot \Delta\T{\lambda}
+	&= - \T{\Phi}\plbr{\T{x}, t} + \nt{coef} \cdot \T{\lambda}
 \end{align}
 The Tikhonov regularization allows the constraint to be violated
 by an amount that depends on the multipliers.
